--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Seller Daily</a>
+                <a class="navbar-brand" href="{% url 'homeview' %}">Seller Daily</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -50,12 +50,6 @@
                     <ul class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'loginpage' %}"><font color=black>Login</font></Login></a></ul>
                 </ul>     
                 </div>
-               
-                        <!-- <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button> -->
                     </form>
                 </div>
             </div>
@@ -81,11 +75,16 @@
                         <div class="col mb-5">
                             <div class="card h-100">
                                 <!-- Sale badge-->
-        
-                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
+                             {% if product.sale_status %}
+                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                        purchased
+                                </div>
+                                {% else %}
+                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                    ready to sell
                                 </div>
                                 <!-- Product image-->
-        
+                                {% endif %}
                                 <img class="card-img-top" src="{{product.image.url}}" height="150"alt="..."/>
                                 <!-- Product details-->
                                 <div class="card-body p-4">
