--- a/customer/templates/customer/userhome.html
+++ b/customer/templates/customer/userhome.html
@@ -12,90 +12,205 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
 <!-- Core theme CSS (includes Bootstrap)-->
 <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-<title>{% block title %}{% endblock %}  
+<script src="https://kit.fontawesome.com/5135d630a7.js" crossorigin="anonymous"></script>
+<title>userhome
 </title>
+<style>
+    .notification {
+        background-color: #0d6efd;
+        color: white;
+        text-decoration: none;
+        padding: 4px 24px;
+        margin-right: 20px;
+        margin-left: 20px;
+        position: relative;
+        display: inline-block;
+        border-radius: 2px;
+        font-size: 20px;
+    }
+
+    .notification:hover {
+        background: #0b5ed7;
+        color: #fff;
+    }
+
+    .notification .badge {
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        padding: 8px 8px;
+        border-radius: 50%;
+        background: red;
+        color: white;
+    }
+
+    .notification-section .dropdown-toggle::after {
+        content: none;
+    }
+
+    .dropdown-toggle::after {
+        color: #fff;
+    }
+
+    #notifications-dropdown li {
+        max-width: 500px;
+        word-wrap: break-word;
+        display: inline-block;
+        white-space: normal;
+    }
+
+    #notifications-dropdown.dropdown-menu {
+        width: 15rem;
+    }
+    
+</style>
 </head>
-  <nav class="navbar navbar-expand-lg navbar-light " style="background-color:  #0dcaf0">
-        <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="{% url 'userhome' %}">Seller Daily</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <font color="black">  Profile </font> 
-                          </a>
-                          <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color:  #0dcaf0">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" href="{% url 'userhome' %}">Seller Daily</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <font color="black"> Profile </font>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
                             <li><a class="dropdown-item" href="{% url 'viewprofile' %}">View Profile</a></li>
                             <li><a class="dropdown-item" href="{% url 'adddetails' %}">Add Aditional Details</a></li>
                             <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Profile</a></li>
                             <li><a class="dropdown-item" href="{% url 'change-password' %}">Change Password</a></li>
-                          </ul>
-                        </li>
-                      </ul>
-     <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <font color="black">  Products </font> 
-                          </a>
-                          <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <font color="black"> Products </font>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
                             <li><a class="dropdown-item" href="{% url 'viewpost' %}">View Products</a></li>
                             <li><a class="dropdown-item" href="{% url 'createpost' %}">Add Products</a></li>
-                           
-                          </ul>
-                        </li>
-                      </ul>
-         <!-- <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'aboutus' %}">About</a></li>
-                     -->
+                            <li><a class="dropdown-item" href="{% url 'myorders' %}">My Orders</a></li>
+                            
+                        </ul>
+                    </li>
                 </ul>
-                            {% if request.user.is_authenticated %}
-                    
-                            <form class="d-flex">
-                                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">{{request.user}}</a></li>
-                                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'userlogout' %}">Logout</a></li>
-                                        {% else %}
-                                       
-                                <ul class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'signup' %}"><font color=black>Register</font></a></ul>
-                               
-                            <ul class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'loginpage' %}"><font color=black>Login</font></Login></a></ul>
-                        </ul>     
-                        </div>
-                        {% endif %} 
-                                <!-- <button class="btn btn-outline-dark" type="submit">
+                <!-- <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'aboutus' %}">About</a></li>
+                     -->
+            </ul>
+            {% if request.user.is_authenticated %}
+            <form class="d-flex">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                href="#">Welcome {{request.user}}</a></li>
+                                <li class="nav-item dropdown notification-section">
+                                    <a href="#" class="notification dropdown-toggle" id="navbarDropdown" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="true">
+                                        <span><i class='fa fa-bell'></i></span>
+                                        <span class="badge" id="notification-badge">0</span>
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="notifications-dropdown"
+                                        data-popper-placement="bottom-end"
+                                        style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(-70px, 42px, 0px);">
+                                        
+                                        {% for i in notifications %}
+                                        {% if i.to_user == request.user %}
+                                        <li class="dropdown-item">{{i.message}}</li>
+                                        <hr class="dropdown-divider">
+                                        {% endif %}
+                                        {% endfor %}
+                                        {% comment %} <li class='dropdown-item'>Hello</li>
+                                        <hr class="dropdown-divider"> {% endcomment %}
+                                        
+                                    </ul>
+                                </li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                href="{% url 'userlogout' %}">Logout</a></li>
+                        {% else %}
+
+                        <ul class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'signup' %}">
+                                <font color=black>Register</font>
+                            </a></ul>
+
+                        <ul class="nav-item"><a class="nav-link active" aria-current="page"
+                                href="{% url 'loginpage' %}">
+                                <font color=black>Login</font>
+                                </Login>
+                            </a></ul>
+                    </ul>
+                </div>
+                {% endif %}
+                <!-- <button class="btn btn-outline-dark" type="submit">
                                     <i class="bi-cart-fill me-1"></i>
                                     Cart
                                     <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                                 </button> -->
-                            </form>
-            </ul> 
-            </div>
-          </div>
-    </nav>
-    <body>
-        {% if messages %}
-        {% for message in messages %}
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-          <strong>{{message}}</strong> 
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </form>
+            </ul>
         </div>
-        {% endfor %}
-        {% endif %}
-<section class="py-5">
-    <div class="container px-4 px-lg-5 mt-5">
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            {% for product in products %}
+    </div>
+</nav>
+{{ room_name|json_script:"room-name" }}
+<script>
+    const roomName = JSON.parse(document.getElementById('room-name').textContent);
+
+    const notificationSocket = new WebSocket(
+        'ws://'
+        + window.location.host
+        + '/ws/notification/'
+        + roomName
+        + '/'
+    );
+
+    notificationSocket.onmessage = function (e) {
+        const data = JSON.parse(e.data);
+        //document.querySelector('#chat-log').value += (data.message + '\n');
+        console.log(data);
+        document.getElementById("notifications-dropdown").innerHTML = "<li class='dropdown-item'>" + data.message + "</li><hr class='dropdown-divider'>" + document.getElementById("notifications-dropdown").innerHTML;
+        document.getElementById("notification-badge").innerHTML = parseInt(document.getElementById("notification-badge").innerHTML) + 1;
+    };
+
+    notificationSocket.onclose = function (e) {
+        console.error('Chat socket closed unexpectedly');
+    };
+</script>
+<body>
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>{{message}}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}
+    {% endif %}
+    <section class="py-5">
+        <div class="container px-4 px-lg-5 mt-5">
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                {% for product in products %}
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Sale badge-->
 
-                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
+                        {% if product.sale_status %}
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                purchased
                         </div>
+                        {% else %}
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                            ready to sell
+                        </div>
+                        {% endif %}
                         <!-- Product image-->
 
-                        <img class="card-img-top" src="{{product.image.url}}" height="150"alt="..."/>
+                        <img class="card-img-top" src="{{product.image.url}}" height="150" alt="..." />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -111,21 +226,21 @@
                                 </div>
                                 <!-- Product price-->
                                 <div class="fw-bold">Rs.{{product.price}}</div>
-                               
+
                             </div>
                         </div>
 
                         <!-- Product actions-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-success mt-auto" href="{% url 'viewmore' product.id %}">View More</a></div>
+                            <div class="text-center"><a class="btn btn-success mt-auto"
+                                    href="{% url 'viewmore' product.id %}">View More</a></div>
                         </div>
                     </div>
                 </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
         </div>
-        </div>
-
-            <!-- <div class="row">
+        <!-- <div class="row">
                 <div class="pagination">
                     <span class="step-links">
                         {% if product.has_previous %}
@@ -144,11 +259,11 @@
                     </span>
                 </div>
             </div> -->
-       
-</section>
+    </section>
 </body>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
 <script src="{% static 'js/scripts.js' %}"></script>
+
 </html>
