--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -14,7 +14,7 @@
 <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
 <nav class="navbar navbar-expand-lg navbar-light " style="background-color:  #0dcaf0">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#!">Seller Daily</a>
+        <a class="navbar-brand" href="{% url 'homeview' %}">Seller Daily</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
