--- a/templates/home.html
+++ b/templates/home.html
@@ -12,98 +12,110 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
 <!-- Core theme CSS (includes Bootstrap)-->
 <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-<title>{% block title %}{% endblock %}  
+<title>{% block title %}{% endblock %}
 </title>
 </head>
-  <nav class="navbar navbar-expand-lg navbar-light " style="background-color:  #0dcaf0">
-        <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="{% url 'userhome' %}">Seller Daily</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <font color="black">  Profile </font> 
-                          </a>
-                          <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item" href="{% url 'viewprofile' %}">View Profile</a></li>
-                            <li><a class="dropdown-item" href="{% url 'adddetails' %}">Add Aditional Details</a></li>
-                            <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Profile</a></li>
-                            <li><a class="dropdown-item" href="{% url 'change-password' %}">Change Password</a></li>
-                          </ul>
-                        </li>
-                      </ul>
-     <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <font color="black">  Products </font> 
-                          </a>
-                          <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item" href="{% url 'viewpost' %}">View Products</a></li>
-                            <li><a class="dropdown-item" href="{% url 'createpost' %}">Add Products</a></li>
-   
-                          </ul>
-                        </li>
-                      </ul>
-         <!-- <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'aboutus' %}">About</a></li>
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color:  #0dcaf0">
+  <div class="container px-4 px-lg-5">
+    <a class="navbar-brand" href="{% url 'userhome' %}">Seller Daily</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+        class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              <font color="black"> Profile </font>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+              <li><a class="dropdown-item" href="{% url 'viewprofile' %}">View Profile</a></li>
+              <li><a class="dropdown-item" href="{% url 'adddetails' %}">Add Aditional Details</a></li>
+              <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Profile</a></li>
+              <li><a class="dropdown-item" href="{% url 'change-password' %}">Change Password</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              <font color="black"> Products </font>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+              <li><a class="dropdown-item" href="{% url 'viewpost' %}">View Products</a></li>
+              <li><a class="dropdown-item" href="{% url 'createpost' %}">Add Products</a></li>
+              <li><a class="dropdown-item" href="{% url 'myorders' %}">My Orders</a></li>
+              
+
+            </ul>
+          </li>
+        </ul>
+        <!-- <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'aboutus' %}">About</a></li>
                      -->
-                </ul>
-                            {% if request.user.is_authenticated %}
-                    
-                            <form class="d-flex">
-                                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">{{request.user}}</a></li>
-                                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'userlogout' %}">Logout</a></li>
-                                        {% else %}
-                                       
-                                <ul class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'signup' %}"><font color=black>Register</font></a></ul>
-                               
-                            <ul class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'loginpage' %}"><font color=black>Login</font></Login></a></ul>
-                        </ul>     
-                        </div>
-                        {% endif %} 
-                                <!-- <button class="btn btn-outline-dark" type="submit">
+      </ul>
+      {% if request.user.is_authenticated %}
+
+      <form class="d-flex">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">{{request.user}}</a></li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'userlogout' %}">Logout</a>
+            </li>
+            {% else %}
+
+            <ul class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'signup' %}">
+                <font color=black>Register</font>
+              </a></ul>
+
+            <ul class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'loginpage' %}">
+                <font color=black>Login</font>
+                </Login>
+              </a></ul>
+          </ul>
+        </div>
+        {% endif %}
+        <!-- <button class="btn btn-outline-dark" type="submit">
                                     <i class="bi-cart-fill me-1"></i>
                                     Cart
                                     <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                                 </button> -->
-                            </form>
-            </ul> 
-            </div>
-          </div>
-    </nav>
-   
-    <body>
-      
- 
-<!-- Header-->
+      </form>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<body>
 
 
- 
-        <section id="section2" class="bg-light py-5">
-          
-            <div class="container">
-              <div class="row">
-                <div class="col-md-6 mx-auto">
-                  <div class="card">
-                    <div class="card-header bg-light text-dark">
-                      {% block content %}
-                        <h4></h4>
-                    </div>
-                    
-                    {% endblock content %}   
-                </div>
-              </div>
+  <!-- Header-->
+
+
+
+  <section id="section2" class="bg-light py-5">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 mx-auto">
+          <div class="card">
+            <div class="card-header bg-light text-dark">
+              {% block content %}
+              <h4></h4>
             </div>
+
+            {% endblock content %}
           </div>
         </div>
-        </section>
-      </body>  
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="{% static 'js/scripts.js' %}"></script>
+      </div>
+    </div>
+    </div>
+  </section>
+</body>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="{% static 'js/scripts.js' %}"></script>
 
 </html>
